--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,3 +47,92 @@
       arxiv={2503.00214}, 
 }
 
+@inproceedings{10609975,
+  author={Lan, Tian and Romanello, Luca and Kovac, Mirko and Armanini, Sophie F. and Bahadir Kocer, Basaran},
+  booktitle={2024 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Aerial Tensile Perching and Disentangling Mechanism for Long-Term Environmental Monitoring}, 
+  year={2024},
+  volume={},
+  number={},
+  selected = {true},
+  abbr  = {ICRA},
+  pages={3827-3833},
+  keywords={Propellers;Energy conservation;Windings;Forestry;Data collection;Autonomous aerial vehicles;Energy efficiency},
+  doi={10.1109/ICRA57147.2024.10609975}}
+
+
+@inproceedings{10161135,
+  author={Hauf, Fabian and Kocer, Basaran Bahadir and Slatter, Alan and Nguyen, Hai-Nguyen and Pang, Oscar and Clark, Ronald and Johns, Edward and Kovac, Mirko},
+  booktitle={2023 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Learning Tethered Perching for Aerial Robots}, 
+  year={2023},
+  volume={},
+  number={},
+  selected = {true},
+  abbr  = {ICRA},
+  pages={1298-1304},
+  keywords={Energy consumption;Data collection;Autonomous aerial vehicles;Robot sensing systems;Birds;Energy efficiency;Trajectory},
+  doi={10.1109/ICRA48891.2023.10161135}}
+
+@inproceedings{10161011,
+  author={Stedman, Harvey and Kocer, Basaran Bahadir and van Zalk, Nejra and Kovac, Mirko and Pawar, Vijay M.},
+  booktitle={2023 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Evaluating Immersive Teleoperation Interfaces: Coordinating Robot Radiation Monitoring Tasks in Nuclear Facilities}, 
+  year={2023},
+  volume={},
+  number={},
+  selected = {true},
+  abbr  = {ICRA},
+  pages={11972-11978},
+  keywords={Visualization;Radiation monitoring;Three-dimensional displays;Service robots;Robot kinematics;Pipelines;Virtual reality;Virtual reality and interfaces;telerobotics and teleoperation;human-centered robotics},
+  doi={10.1109/ICRA48891.2023.10161011}}
+
+@inproceedings{9981656,
+  author={Kocer, Basaran Bahadir and Stedman, Harvey and Kulik, Patryk and Caves, Izaak and Van Zalk, Nejra and Pawar, Vijay M. and Kovac, Mirko},
+  booktitle={2022 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={Immersive View and Interface Design for Teleoperated Aerial Manipulation}, 
+  year={2022},
+  volume={},
+  number={},
+  selected = {true},
+  abbr  = {IROS},
+  pages={4919-4926},
+  keywords={Training;Measurement;Virtual reality;Forestry;Cognitive load;Physiology;Task analysis;Virtual reality and interfaces;telerobotics and teleoperation;human-centered robotics},
+  doi={10.1109/IROS47612.2022.9981656}}
+
+@article{zhang2022aerial,
+  title={Aerial additive manufacturing with multiple autonomous robots},
+  author={Zhang, Ketao and Chermprayong, Pisak and Xiao, Feng and Tzoumanikas, Dimos and Dams, Barrie and Kay, Sebastian and Kocer, Basaran Bahadir and Burns, Alec and Orr, Lachlan and Alhinai, Talib and others},
+  journal={Nature},
+  volume={609},
+  number={7928},
+  pages={709--717},
+  year={2022},
+  selected = {true},
+  abbr  = {Nature},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{9881871,
+  author={Stephens, Brett and Orr, Lachlan and Kocer, Basaran Bahadir and Nguyen, Hai-Nguyen and Kovac, Mirko},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={An Aerial Parallel Manipulator With Shared Compliance}, 
+  year={2022},
+  volume={7},
+  number={4},
+  pages={11902-11909},
+  keywords={Manipulator dynamics;End effectors;Robot sensing systems;Hardware;Actuators;Servomotors;Task analysis;Aerial systems: mechanics and control;aerial systems: applications;dynamics},
+  doi={10.1109/LRA.2022.3205111}}
+
+@inproceedings{9561729,
+  author={Kocer, Basaran Bahadir and Hady, Mohamad Abdul and Kandath, Harikumar and Pratama, Mahardhika and Kovac, Mirko},
+  booktitle={2021 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Deep Neuromorphic Controller with Dynamic Topology for Aerial Robots}, 
+  year={2021},
+  volume={},
+  number={},
+  selected = {true},
+  abbr  = {ICRA},
+  pages={110-116},
+  keywords={Neuromorphics;Network topology;Neural networks;Unmanned aerial vehicles;Stability analysis;Data models;Topology},
+  doi={10.1109/ICRA48506.2021.9561729}}
