--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,6 +56,7 @@
   number={},
   selected = {true},
   abbr  = {ICRA},
+  preview={icra24-perch.png},
   pages={3827-3833},
   keywords={Propellers;Energy conservation;Windings;Forestry;Data collection;Autonomous aerial vehicles;Energy efficiency},
   doi={10.1109/ICRA57147.2024.10609975}}
