--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -71,6 +71,7 @@
   number={},
   selected = {true},
   abbr  = {ICRA},
+  preview={icra23-perch.png},
   pages={1298-1304},
   keywords={Energy consumption;Data collection;Autonomous aerial vehicles;Robot sensing systems;Birds;Energy efficiency;Trajectory},
   doi={10.1109/ICRA48891.2023.10161135}}
