--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -96,7 +96,7 @@
   year={2022},
   volume={},
   number={},
-  selected = {true},
+  selected = {false},
   abbr  = {IROS},
   pages={4919-4926},
   keywords={Training;Measurement;Virtual reality;Forestry;Cognitive load;Physiology;Task analysis;Virtual reality and interfaces;telerobotics and teleoperation;human-centered robotics},
@@ -112,6 +112,8 @@
   year={2022},
   selected = {true},
   abbr  = {Nature},
+  preview={nature22.png},
+  doi={10.1038/s41586-022-04988-4},
   publisher={Nature Publishing Group UK London}
 }
 
