--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -83,7 +83,7 @@
   year={2023},
   volume={},
   number={},
-  selected = {true},
+  selected = {false},
   abbr  = {ICRA},
   pages={11972-11978},
   keywords={Visualization;Radiation monitoring;Three-dimensional displays;Service robots;Robot kinematics;Pipelines;Virtual reality;Virtual reality and interfaces;telerobotics and teleoperation;human-centered robotics},
