--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -73,6 +73,7 @@
   abbr  = {ICRA},
   preview={icra23-perch.png},
   pages={1298-1304},
+  video={https://youtu.be/mcnNp-N6qTA?si=kpaD3jiQYaKb7OE5},
   keywords={Energy consumption;Data collection;Autonomous aerial vehicles;Robot sensing systems;Birds;Energy efficiency;Trajectory},
   doi={10.1109/ICRA48891.2023.10161135}}
 
