--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -115,6 +115,7 @@
   abbr  = {Nature},
   preview={nature22.png},
   doi={10.1038/s41586-022-04988-4},
+  video={https://youtu.be/pDKNEO0gDuE?si=4zKrQqxK70oh2AbS},
   publisher={Nature Publishing Group UK London}
 }
 
