--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,7 +48,7 @@
 }
 
 @inproceedings{10609975,
-  author={Lan, Tian and Romanello, Luca and Kovac, Mirko and Armanini, Sophie F. and Bahadir Kocer, Basaran},
+  author={Lan, Tian and Romanello, Luca and Kovac, Mirko and Armanini, Sophie F. and Basaran Bahadir Kocer},
   booktitle={2024 IEEE International Conference on Robotics and Automation (ICRA)}, 
   title={Aerial Tensile Perching and Disentangling Mechanism for Long-Term Environmental Monitoring}, 
   year={2024},
